// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Label/HoverInfoLabel Hover Info Label 1`] = `
<div>
  <p
    aria-label="hover info"
    class="MuiTypography-root MuiTypography-body1 makeStyles-noWrap makeStyles-display css-1ezega9-MuiTypography-root"
    data-mui-internal-clone-element="true"
  >
    Some label
    <span />
  </p>
</div>
`;

exports[`Storyshots Label/HoverInfoLabel Hover Info Label Info 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 makeStyles-noWrap makeStyles-display css-1ezega9-MuiTypography-root"
    data-mui-internal-clone-element="true"
  >
    Some label
    <span />
  </p>
</div>
`;

exports[`Storyshots Label/HoverInfoLabel Icon Position 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 makeStyles-noWrap makeStyles-display css-1ezega9-MuiTypography-root"
    data-mui-internal-clone-element="true"
  >
    <span />
    Some label
  </p>
</div>
`;

exports[`Storyshots Label/HoverInfoLabel Label Props 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body2 makeStyles-noWrap makeStyles-display css-ab4e19-MuiTypography-root"
    data-mui-internal-clone-element="true"
  >
    Some label
    <span />
  </p>
</div>
`;
